2014-08-15  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: Calculate MD5 sums for release tarballs.

2014-08-14  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/build-installer.sh: Copy Eclipse instead of
	moving.

2014-08-06  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* tag-release.sh: Use stable branches for tags, instead of detached
	tags.

2014-08-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* site.exp: Ensure that HOSTCC and HOSTCFLAGS are set.

2014-07-24  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Do not use temporary dir for stage 1 toolchain.

2014-07-21  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: Fix broken prebuilt tarballs.

2014-07-18  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: Proper release name handling.

2014-07-17  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-all.sh: Adjust toolchain version string.
	* build-elf32.sh: Likewise.
	* build-uclibc.sh: Likewise.

2014-07-04  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update to match current state.

2014-07-04  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: New file.

2014-07-04  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-all.sh: Rename all mentions of EM to arcem.
	* build-elf32.sh: Likewise.
	* build-uclibc.sh: Likewise.

2014-07-03  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/build-elf32_windows.patch: Use i686-pc-mingw32 by
	default.

2014-07-03  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Bump Linux branch to arc-3.15.

2014-07-02  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Replace hardcoded triplet with variable.

2014-07-02  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Pass -f when creating symlinks.

2014-07-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* dejabase/baseboards/arc-sim-nsimdrv.exp: Add atomic options.
