@@ -1,3 +1,12 @@
+2014-09-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	Upgrade the script for building a kernel from the command
+	line. This is not part of the official release, but can be
+	convenient for developers.
+
+	* build-kernel.sh: Add proper argument handling to allow control
+	of the build.
+
 2014-08-15  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* Makefile.release: Calculate MD5 sums for release tarballs.
